better ordering of events

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "generate": "bun index.ts",
     "generate:combined": "bun generate-combined.ts",
+    "sort": "bun sort-json.ts",
     "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
     "lint:md:fix": "markdownlint-cli2 --fix \"**/*.md\" \"#node_modules\"",
     "format:md": "prettier --write \"**/*.md\" --ignore-path .gitignore"
